name:                advent
version:             0.1.0.0
synopsis:            Advent of Code 2015 in Haskell
description:         Please see README.md
homepage:            https://github.com/alexspurling/adventofcode
license:             BSD3
author:              Alex Spurling
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9,
                       Day10, Day11, Day12, Day13, Day14
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , regex-compat
                     , regex-posix
                     , cryptohash
                     , bytestring
                     , array
                     , linear
                     , attoparsec
                     , aeson
                     , scientific
                     , vector
                     , unordered-containers

test-suite adventtest
  hs-source-dirs:      test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5
                     , advent
                     , containers
                     , hspec >= 1.3
                     , bytestring >= 0.10.4.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010